trunk/Archive2/3b/0e068b550b4e8f/output
g++
main.cpp: In function 'int main()':
main.cpp:9:5: error: 'Foo::Foo(const Foo&)' is private
     Foo(const Foo&);
     ^
main.cpp:15:20: error: within this context
     auto f = Foo(42);
                    ^
clang++
main.cpp:15:14: error: calling a private constructor of class 'Foo'
    auto f = Foo(42);
             ^
main.cpp:9:5: note: declared private here
    Foo(const Foo&);
    ^
1 error generated.
